@@ -16,6 +16,7 @@
 package com.netflix.zuul;
 
 import com.netflix.zuul.filters.ZuulFilter;
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * Default factory for creating instances of ZuulFilter.
@@ -30,7 +31,9 @@ public class DefaultFilterFactory implements FilterFactory {
      * @return A new instance of ZuulFilter
      */
     @Override
-    public ZuulFilter newInstance(Class clazz) throws InstantiationException, IllegalAccessException {
-        return (ZuulFilter) clazz.newInstance();
+    public ZuulFilter<?, ?> newInstance(Class<?> clazz)
+            throws InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException,
+                    NoSuchMethodException {
+        return (ZuulFilter<?, ?>) clazz.getDeclaredConstructor().newInstance();
     }
 }
